<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceScreen
        android:key="@string/pref_hint"
        android:title="@string/pref_hint"
        android:summary="@string/pref_hint_summary">
        <CheckBoxPreference
            android:key="wifi"
            android:title="@string/wifi_title"
            android:summary="@string/wifi_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="hints"
            android:title="@string/hint_title"
            android:summary="@string/hint_summary"
            android:defaultValue="true"
            />
        <SwitchPreference
            android:key="hints_switch"
            android:title="@string/hint_title"
            android:summary="@string/hint_summary"
            android:defaultValue="true"
            />
    </PreferenceScreen>
    <PreferenceCategory
        android:title="@string/textCategorySetting"
        android:dependency="hints_switch">
        <EditTextPreference
            android:key="@string/pref_size"
            android:title="@string/size_font"
            android:summary="@string/size_font_summary"
            android:defaultValue="14"
            android:dialogTitle="@string/insertSizeDialog"
            />
        <ListPreference
            android:key="@string/pref_style"
            android:title="@string/pref_style"
            android:summary="@string/pref_style_summary"
            android:defaultValue="1"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:dialogTitle="@string/chooseTextDialogTitle"
            />

        <RingtonePreference
            android:key="@string/rington_setting"
            android:title="@string/rington_setting_title"
            android:summary="@string/rington_setting_summary"
            />
    </PreferenceCategory>
    <PreferenceScreen
        android:summary="Импортированная системная настройка"
        android:title="Настройка через намерение" >
        <intent android:action="android.settings.AIRPLANE_MODE_SETTINGS" />
    </PreferenceScreen>
    <PreferenceScreen
        android:summary="Импортированная системная настройка2"
        android:title="Настройка через намерение2" >
        <intent android:action="android.settings.DISPLAY_SETTINGS" />
    </PreferenceScreen>
</PreferenceScreen>